# libgraphy

./: .gitignore  DEVELOPERS.md  LICENSE  README.md  TODO.md  dev.nix  flake.nix  pyproject.toml  requirements.txt
benchmark/: bench_edges.sh  bench_edges_perf.sh  bench_vertices.sh  bench_vertices_perf.sh  cpu_mem_bench.py  cpu_mem_bench.sh  dijkstra_bench.py  dijkstra_data.py  generate_dijkstra_graphs.py  generate_edges.py  lg_cpu_mem_bench.py  lg_create_edges.py  lg_create_vertices.py  lg_time_bench.py  nx_cpu_mem_bench.py  nx_create_edges.py  nx_create_vertices.py  plot.py  plot_dijkstra.py  plot_perf.py  run  scg_cpu_mem_bench.py  scg_create_edges.py  scg_create_vertices.py  time_bench.py
benchmark/benches/: lg_cpu_mem.csv  lg_time.csv  nx_cpu_mem.csv  nx_time.csv  scg_cpu_mem.csv  scg_time.csv
benchmark/dijkstra/: lg_cpu_mem_bench.py  lg_time_bench.py  nx_time_bench.py  plot.py  scg_time_bench.py
examples/: README.md  error.py
examples/edge/: edge.py  graph-add.py  graph-iadd.py  imul.py  mul.py
libgraphy/: TODO.md  __init__.py  algorithm.py  edge.py  edgeset.py  exception.py  graph.py  graph_traits.py  graphfactory.py  heuristic.py  multidispatch.py  path.py  route.py  utils.py  vertex.py
notebook/: 1.ipynb  README.md  Untitled.ipynb  export_img.py  requirements.txt
notes/: 1.md  2.md  TODO.md  known_issues.md
scripts/: create-dist.sh  upload-testpi.sh
src/: graph.py
tests/: test_algorithm.py  test_edge.py  test_graph.py  test_graph_traits.py  test_graphfactory.py  test_heuristic.py  test_path.py  test_route.py  test_vertex.py  utils.py
(+165 files in other folders)
