[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libgraphy"
version = "0.0.1"
authors = [
  { name="satk0", email="satko_a@op.pl" },
]
description = "Directed Graph Library"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

