[tool.poetry]
name = "libgraphy"
version = "0.0.4"
description = "Directed Graph Library"
authors = ["satk0 <satko_a@op.pl>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
graphviz = {version = "^0.20.3", optional = true}
ipython = {version = "^8.27.0", optional = true}

# https://python-poetry.org/docs/pyproject/#extras
[tool.poetry.extras]
vizualization = ["graphviz", "IPython"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.bench]
optional = true

[tool.poetry.group.bench.dependencies]
matplotlib = "^3.9.3"
pyqt6 = "^6.7.1"
networkx = "^3.4.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
